Fix slimbox (almost) http://stackoverflow.com/questions/15336690/slimbox-overlay-in-front-of-the-image

--- a/src/Orchard.Web/Modules/LETS/Styles/slimbox2.css
+++ b/src/Orchard.Web/Modules/LETS/Styles/slimbox2.css
@@ -2,7 +2,6 @@
 
 #lbOverlay {
 	position: fixed;
-	z-index: 9999;
 	left: 0;
 	top: 0;
 	width: 100%;
@@ -13,7 +12,6 @@
 
 #lbCenter, #lbBottomContainer {
 	position: absolute;
-	z-index: 9999;
 	overflow: hidden;
 	background-color: #fff;
 }
@@ -28,6 +26,7 @@
 	top: 0;
 	border: 10px solid #fff;
 	background-repeat: no-repeat;
+    z-index: 1;
 }
 
 #lbPrevLink, #lbNextLink {
